--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:        pretty
 # Server
 # ---------------------------------------------------------------------------
 
-source:           app
+source:           app/
 destination:      _gh_pages
 port:             4002
 baseurl:          http://pongstr.github.io/rolling-into-deep/
